vlib/v/checker/tests/mut_map_get_value_address_err.out
vlib/v/checker/tests/mut_map_get_value_address_err.vv:3:12: error: cannot take the address of map values
    1 | fn main() {
    2 |     mut m := {'key' : 3}
    3 |     a := &m['key']
      |            ~~~~~~~
    4 |     println(a)
    5 | }
